--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,8 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: $(system.defaultWorkingDirectory)/AndroidApps/MyApp
-    gradleWrapperFile: $(system.defaultWorkingDirectory)/AndroidApps/MyApp/gradlew
+    workingDirectory: $(system.defaultWorkingDirectory)
+    gradleWrapperFile: $(system.defaultWorkingDirectory)/gradlew
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
