--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,6 @@ steps:
     workingDirectory: $(system.defaultWorkingDirectory)
     gradleWrapperFile: $(system.defaultWorkingDirectory)/gradlew
     gradleOptions: '-Xmx3072m'
-    publishJUnitResults: false
+    publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'assembleDebug'
