--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ steps:
 - task: Gradle@2
   inputs:
     workingDirectory: $(system.defaultWorkingDirectory)
-    gradleWrapperFile: $(system.defaultWorkingDirectory)/gradle/wrapper
+    gradleWrapperFile: 'gradlew'
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
